# Orbit_Simulator

./: .gitmodules  CMakeLists.txt  README.md  linux_build_profile  linux_profile  main.cpp  mingw_profile
config/Bodies/: earth.json
config/Spacecraft/: burning_spacecraft.json  demo_spacecraft.json  demo_spacecraft_5.json
output/: Burning_Spacecraft_output.csv  Demo Spacecraft_4_output.csv
python/: clear_output.py  graphics.py  plots.py
src/: Functions.h  Simulator.cpp  Simulator.h
